--- a/HealthMed.Web/ClientApp/src/index.html
+++ b/HealthMed.Web/ClientApp/src/index.html
@@ -6,7 +6,7 @@
       <base href="/" />
 
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
+      <link rel="icon" type="image/x-icon" href="assets/img/favIcon.jpg" />
 
       <script src="https://kit.fontawesome.com/8ee215216e.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
