--- a/HealthMed.Web/ClientApp/src/index.html
+++ b/HealthMed.Web/ClientApp/src/index.html
@@ -8,6 +8,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="icon" type="image/x-icon" href="assets/img/favIcon.jpg" />
 
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://kit.fontawesome.com/8ee215216e.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
